DataStream (функциональное программирование) Task 6.3